--- a/css/style.css
+++ b/css/style.css
@@ -241,10 +241,6 @@ a {
   margin-right: 30px;
 }
 
-.section-team-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 /* * FOOTER */
 
 .page-footer {
@@ -305,7 +301,7 @@ a {
   padding: 6px 24px;
 }
 
-.gallery-item .btn-active,
+.gallery-filter-item .btn-active,
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--acent-color);
@@ -320,7 +316,7 @@ a {
   padding: 98px 0 0 0;
 }
 
-.gallery-item {
+.gallery-filter-item {
   margin-right: 8px;
 }
 
@@ -341,14 +337,14 @@ a {
   margin: 0;
 }
 
-.gallery-portfolio {
+.gallery-portfolio-items {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 0px;
 }
 
-.gallery-items {
+.gallery-portfolio-item {
   border: 1px solid #eeeeee;
   flex-basis: calc(100% / 3 - 30px);
   margin: 0 0 30px 0;
