--- a/css/studio.css
+++ b/css/studio.css
@@ -1,37 +1,3 @@
-/* * COMMON STYLE */
-
-:root {
-  --primary-text-color: #212121;
-  --secondary-text-color: #757575;
-  --acent-color: #2196f3;
-  --white-color: #fff;
-  --bg-color-team: #f5f4fa;
-  --bg-color-acent: #2f303a;
-  --contacts-color-footer: rgba(255, 255, 255, 0.6);
-}
-
-body {
-  font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
-  background-color: var(--white-color);
-  color: var(--primary-text-color);
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  font-style: normal;
-  color: inherit;
-  text-decoration: none;
-}
-
-/* * STYLE index.html */
-
 /* * HEADER */
 
 .page-header {
@@ -134,8 +100,7 @@ a {
   color: var(--white-color);
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin: 0;
-  padding-bottom: 30px;
+  margin: 0 0 30px 0;
 }
 
 .hero-btn {
@@ -152,7 +117,7 @@ a {
 /* * DESCRIPTION */
 
 .section-description {
-  margin-bottom: 94px;
+  padding: 94px 0;
 }
 
 .section-description-items {
@@ -195,8 +160,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
-  margin: 0 0 34px 0;
+  margin: 50px 0 34px 0;
 }
 
 .section-work-item {
@@ -274,82 +238,3 @@ a {
 }
 
 /* * STYLE portfolio.html */
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.filter-btn {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
-  border-color: var(var(--bg-color-team));
-  border-radius: 4px;
-  border: none;
-  padding: 6px 24px;
-}
-
-.gallery-filter-item .btn-active,
-.filter-btn:hover,
-.filter-btn:focus {
-  background-color: var(--acent-color);
-  color: var(--white-color);
-}
-
-.gallery-filter-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0 50px 0;
-  padding: 98px 0 0 0;
-}
-
-.gallery-filter-item {
-  margin-right: 8px;
-}
-
-.gallery-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin: 0;
-}
-
-.gallery-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-  margin: 0;
-}
-
-.gallery-portfolio-items {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 0px;
-}
-
-.gallery-portfolio-item {
-  border: 1px solid #eeeeee;
-  flex-basis: calc(100% / 3 - 30px);
-  margin: 0 0 30px 0;
-}
-
-.gallery-item-text-container {
-  padding: 20px 24px;
-}
