--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -48,7 +48,6 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin: 0;
 }
 
 .gallery-text {
@@ -57,22 +56,20 @@
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
-  margin: 0;
 }
 
 .gallery-portfolio-items {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0px;
 }
 
 .gallery-portfolio-item {
   border: 1px solid #eeeeee;
   flex-basis: calc(100% / 3 - 30px);
-  margin: 0 0 30px 0;
+  margin: 0 30px 30px 0;
 }
 
 .gallery-item-text-container {
-  padding: 20px 24px;
+  padding: 20px 16px;
 }
