--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,7 @@
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --acent-color: #2196f3;
-  --white-color: #fff;
+  --white-color: #ffffff;
   --bg-color-team: #f5f4fa;
   --bg-color-acent: #2f303a;
   --contacts-color-footer: rgba(255, 255, 255, 0.6);
@@ -35,4 +35,125 @@ a {
   font-style: normal;
   color: inherit;
   text-decoration: none;
+}
+
+/* * HEADER */
+
+.page-header {
+  padding: 24px 0;
+}
+
+.logo-header,
+.logo-footer {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+}
+
+.logo-header span,
+.logo-footer span {
+  color: var(--acent-color);
+}
+
+.logo-header {
+  margin-right: 93px;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page-header .container {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+}
+
+.nav-item {
+  margin-right: 50px;
+}
+
+.nav-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--acent-color);
+}
+
+.link-active {
+  color: var(--acent-color);
+}
+
+.contacts-header-list {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  color: var(--secondary-text-color);
+  display: flex;
+  margin-left: auto;
+}
+
+.contacts-header-link:hover,
+.contacts-header-link:focus {
+  color: var(--acent-color);
+}
+
+.contacts-header-link {
+  margin-right: 50px;
+}
+
+/* * FOOTER */
+
+.page-footer {
+  background-color: var(--bg-color-acent);
+  padding: 60px;
+}
+
+.logo-footer {
+  color: var(--white-color);
+}
+
+.contacts-footer-maps {
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--white-color);
+}
+
+.contacts-footer-info {
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--contacts-color-footer);
+}
+
+.contacts-footer-list {
+  padding: 20px 0 0 0;
+}
+
+.contacts-footer-item {
+  padding-top: 9px;
+}
+
+.title {
+  font-size: 36px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-align: center;
 }
