--- a/css/studio.css
+++ b/css/studio.css
@@ -1,86 +1,3 @@
-/* * HEADER */
-
-.page-header {
-  padding: 24px 0;
-}
-
-.logo-header,
-.logo-footer {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-}
-
-.logo-header span,
-.logo-footer span {
-  color: var(--acent-color);
-}
-
-.logo-header {
-  margin-right: 93px;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.page-header .container {
-  display: flex;
-  align-items: center;
-}
-
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
-.nav-items {
-  display: flex;
-}
-
-.nav-item {
-  margin-right: 50px;
-}
-
-.nav-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--acent-color);
-}
-
-.link-active {
-  color: var(--acent-color);
-}
-
-.contacts-header {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  color: var(--secondary-text-color);
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts-header-link:hover,
-.contacts-header-link:focus {
-  color: var(--acent-color);
-}
-
-.contacts-header-link {
-  margin-right: 50px;
-}
-
 /* * SECTION HERO */
 
 .hero {
@@ -116,76 +33,68 @@
 
 /* * DESCRIPTION */
 
-.section-description {
+.desc {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.section-description-items {
-  display: flex;
-  justify-content: space-between;
-}
-
-.section-description-item {
-  width: 270px;
-}
-
-.section-description-item:nth-child(4) {
-  margin-right: 20px;
-}
-
-.section-description-title {
+.desc-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   text-transform: uppercase;
 }
 
-.section-description-text,
-.section-team-text {
+.desc-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.desc-item {
+  width: 270px;
+}
+
+.desc-item:nth-child(4) {
+  margin-right: 20px;
+}
+
+.desc-text {
   font-size: 14px;
   line-height: 1.7;
   color: var(--secondary-text-color);
   padding-top: 10px;
 }
 
-/* * WHAT WE DO */
+/* * WORK */
 
-.section-work-title {
-  font-size: 36px;
-  line-height: 1.2;
-  font-weight: 700;
-  text-align: center;
+.work-title {
   margin-right: 30px;
   margin-bottom: 50px;
 }
 
-.section-work-items {
+.work-list {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 0 94px 0;
 }
 
-.section-work-item {
+.work-item {
   margin-right: 30px;
 }
 
 /* * OUR TEAM */
 
-.section-team {
+.team {
   background-color: var(--bg-color-team);
 }
 
-.section-team h2 {
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
+.team-title {
   padding-top: 94px;
   margin-bottom: 50px;
 }
 
-.section-team-items {
+.team-list {
   text-align: center;
   display: flex;
   justify-content: center;
@@ -193,13 +102,13 @@
   padding-bottom: 94px;
 }
 
-.section-team-title {
+.team-subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
 }
 
-.section-team-item {
+.team-item {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -207,37 +116,13 @@
   margin-right: 30px;
 }
 
-.section-team-container {
+.team-text {
+  font-size: 16px;
+  line-height: 1.2;
+  color: var(--secondary-text-color);
+  padding-top: 10px;
+}
+
+.team-container {
   padding: 30px 0;
-}
-
-/* * FOOTER */
-
-.page-footer {
-  background-color: var(--bg-color-acent);
-  padding: 60px;
-}
-
-.logo-footer {
-  color: var(--white-color);
-}
-
-.contacts-footer-maps {
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--white-color);
-}
-
-.contacts-footer-info {
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--contacts-color-footer);
-}
-
-.contacts-footer-items {
-  padding: 20px 0 0 0;
-}
-
-.contacts-footer-item {
-  padding-top: 9px;
 }
