--- a/css/common.css
+++ b/css/common.css
@@ -37,6 +37,19 @@ a {
   text-decoration: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* * HEADER */
 
 .page-header {
@@ -124,7 +137,7 @@ a {
 
 .page-footer {
   background-color: var(--bg-color-acent);
-  padding: 60px;
+  padding: 60px 0;
 }
 
 .logo-footer {
