--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,5 +1,3 @@
-
-
 .filter-btn {
   font-family: inherit;
   font-weight: 500;
@@ -19,12 +17,16 @@
   color: var(--white-color);
 }
 
+.portfolio {
+  padding-bottom: 94px;
+}
+
 .portfolio-list {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 0 50px 0;
-  padding: 98px 0 0 0;
+  padding: 94px 0 0 0;
 }
 
 .portfolio-item {
@@ -35,7 +37,6 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 94px;
   margin-right: -30px;
 }
 
