--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,6 +18,7 @@
 }
 
 .portfolio {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -26,7 +27,6 @@
   justify-content: center;
   align-items: center;
   margin: 0 0 50px 0;
-  padding: 94px 0 0 0;
 }
 
 .portfolio-item {
